<resources>
    <string name="app_name">JereTestApp</string>
    <string name="hi">Hi</string>
    <string name="home_page">Home</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_learning">Learning</string>
    <string name="nav_interest">Interest</string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_settings">My</string>
    <string name="nav_about_me">About Me</string>

    <!-- Toolbar titles when notifications menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Learning</item>
        <item>Interest</item>
        <item>Entertainment</item>
        <item>My</item>
    </string-array>

    <string name="activity_title_about_me">About Me</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="tutorial">Tutorial</string>

    <!--  About me  -->
    <string name="about_me_introduction">My name is Jere, I from China, I\'m an Android soft engineer!</string>

    <!-- Tutorial -->
    <string name="welcome_content">Welcome to JereTestApp</string>
    <string name="app_content_explain">关于本APP：我会添加任何自己想添加的功能</string>
    <string name="api_content_explain">关于调用的API说明：现在本应用调用的API全都来自Wanandroid的开放API，感谢泓洋大佬</string>
    <string name="finish_tutorial">Finish</string>

    <!-- Register Login Page-->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repassword">rePassword</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="switch_to_login">switch to login</string>
    <string name="switch_to_register">switch to register</string>

    <string name="home_page_cn">主页</string>
    <string name="learning_cn">学习</string>
    <string name="interest_cn">兴趣</string>
    <string name="entertainment_cn">娱乐</string>
    <string name="my_info_cn">我的</string>

    <!-- about My account info -->
    <string name="photo_album_cn">相册</string>
    <string name="expression_cn">表情</string>
    <string name="collection_folder">收藏夹</string>
    <string name="settings_cn">设置</string>

    <!--    about personal info-->
    <string name="personal_information">个人信息</string>
    <string name="personal_info_name">名字</string>
    <string name="personal_info_avatar">头像</string>
    <string name="personal_info_email">邮箱</string>
    <string name="personal_info_my_qrcode">我的二维码</string>
    <string name="personal_info_more">更多</string>
    <string name="personal_info_my_address">我的地址</string>
    <string name="more_info_gender">性别</string>
    <string name="more_info_district">地区</string>
    <string name="more_info_personal_signature">个性签名</string>

    <string name="set_name_cn">设置名字</string>
    <string name="set_email_cn">设置邮箱</string>
    <string name="set_gender_cn">设置性别</string>

    <string name="cancel_cn">取消</string>
    <string name="complete_cn">完成</string>
</resources>
