<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/learning_icon"
            android:title="@string/nav_learning" />
        <item
            android:id="@+id/nav_interest"
            android:icon="@drawable/interest_icon"
            android:title="@string/nav_interest" />

        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/play_icon"
            android:title="@string/nav_entertainment" />

        <item
            android:id="@+id/nav_my"
            android:icon="@drawable/my_account_icon"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_me" />
            <item
                android:id="@+id/nav_tutorial"
                android:title="@string/tutorial" />
        </menu>
    </item>
</menu>